--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,10 @@
     <color name="white">#FFFFFF</color>
     <color name="grey1">#EDEDED</color>
     <color name="grey2">#F2F2F2</color>
+    <color name="background_color">@color/white</color>
     <color name="light_blue">#66E2FF</color>
+    <color name="background_accent">#D2EEFA</color>
+    <color name="background_accent_saturated">#f8f9fa</color>
+    <color name="blue">#86D7F5</color>
+    <color name="transparent">#00000000</color>
 </resources>
