--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.labessence.biotech.finaldilution.ApplicationContext">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_undo"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/action_undo"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_redo"
+        android:orderInCategory="150"
+        android:title="@string/action_redo"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_save"
+        android:orderInCategory="200"
+        android:title="@string/action_save"
         app:showAsAction="never" />
 </menu>
