--- a/app/src/main/res/layout/compound_list.xml
+++ b/app/src/main/res/layout/compound_list.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/compoundsList"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="400dp"
     android:background="#00ffffff"
     android:elevation="40dp"
     app:behavior_hideable="false"
@@ -27,15 +27,15 @@
         style="@style/FinalDilutionH1"
         android:layout_width="0dp"
         android:layout_height="50dp"
+        android:background="@color/grey1"
         android:gravity="center"
         android:text="@string/compound_list"
         android:textSize="28sp"
-        android:background="@color/grey1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compoundsListHeader" />
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/compoundsListView"
         android:layout_width="0dp"
         android:layout_height="0dp"
