--- a/app/src/main/res/layout/compound_list_item.xml
+++ b/app/src/main/res/layout/compound_list_item.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
 
     <TextView
         android:id="@+id/compound_list_item_name_text_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        tools:text="Compound"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        style="@style/FinalDilutionCompound"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/compound_list_item_mass_text_view"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Compound" />
 
     <TextView
         android:id="@+id/compound_list_item_mass_text_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        style="@style/FinalDilutionMass"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/compound_list_item_name_text_view"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="[KCl]" />
 </androidx.constraintlayout.widget.ConstraintLayout>
