--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
     <color name="grey1">#EDEDED</color>
     <color name="grey2">#F2F2F2</color>
@@ -11,5 +8,11 @@
     <color name="background_accent">#D2EEFA</color>
     <color name="background_accent_saturated">#f8f9fa</color>
     <color name="blue">#86D7F5</color>
+    <color name="text_default">#000000</color>
+    <color name="text_secondary">#757575</color>
     <color name="transparent">#00000000</color>
+
+    <color name="colorPrimary">@color/light_blue</color>
+    <color name="colorPrimaryDark">@color/blue</color>
+    <color name="colorAccent">@color/light_blue</color>
 </resources>
