Real compounds list on init!

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,6 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/professore_full_screen"
     android:fitsSystemWindows="true"
-    tools:context=".peripherals.view.SplashActivity">
+    tools:context=".init.view.SplashActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
