--- a/app/src/main/res/layout/content_startup.xml
+++ b/app/src/main/res/layout/content_startup.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".peripherals.view.StartupActivity">
+    tools:context=".init.view.StartupActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
