--- a/app/src/main/res/layout/compound_list.xml
+++ b/app/src/main/res/layout/compound_list.xml
@@ -10,7 +10,7 @@
     app:behavior_peekHeight="@dimen/bottom_sheet_collapsed_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-    <com.labessence.biotech.finaldilution.compound.view.AddCompoundButtonView
+    <com.labessence.biotech.finaldilution.compound.view.AddComponentButtonView
         android:id="@+id/compoundsListHeader"
         style="@style/FinalDilutionH1"
         android:layout_width="match_parent"
@@ -44,4 +44,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/compoundsListTitle" />
+
+    <Button
+        android:id="@+id/new_compound_button"
+        style="@style/FinalDilutionButton"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="20dp"
+        android:textSize="25sp"
+        android:text="@string/buttonNewCompound"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
