--- a/app/src/main/res/layout/startup.xml
+++ b/app/src/main/res/layout/startup.xml
@@ -13,14 +13,14 @@
         android:background="@color/grey2">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/title_activity_startup"
             android:id="@+id/textView2"
             style="@style/FinalDilutionH1"
-            android:layout_marginStart="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:layout_alignParentStart="true" />
+            android:layout_marginStart="50dp"
+            android:text="@string/title_activity_startup" />
     </RelativeLayout>
 
     <ListView
@@ -29,8 +29,7 @@
         android:layout_height="0dp"
         android:layout_weight="650"
         android:paddingLeft="50dp"
-        android:paddingRight="50dp"
-        />
+        android:paddingRight="50dp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -40,14 +39,8 @@
 
         <Button
             android:id="@+id/addNewSolutionButton"
+            style="@style/FinalDilutionButton"
             android:layout_width="150dp"
-            android:layout_height="50dp"
-            android:text="@string/add_new_solution_button_text"
-            android:background="@drawable/rounded_button"
-            android:textColor="@color/white"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textStyle="bold"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:text="@string/add_new_solution_button_text" />
     </RelativeLayout>
 </LinearLayout>
