--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -1,9 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/new_compound_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
+
+    <com.labessence.biotech.finaldilution.compound.view.AddComponentButtonView
+        android:id="@+id/compoundsListHeader"
+        style="@style/FinalDilutionH1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="@string/buttonNewCompound"
+        android:textAlignment="center"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toTopOf="@+id/compoundsListTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
         android:id="@+id/compoundsListTitle"
@@ -11,84 +28,100 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:background="@color/grey1"
-        app:layout_constraintBottom_toTopOf="@+id/all_texts_wrapped"
         android:gravity="center"
-        android:text="Add new compound"
+        android:text="@string/title_add_new_compound"
         android:textSize="28sp"
-        app:layout_constraintVertical_chainStyle="packed"
+        app:layout_constraintBottom_toTopOf="@+id/transparent_window"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/compoundsListHeader" />
+
+    <View
+        android:id="@+id/transparent_window"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/transparent"
+        app:layout_constraintBottom_toTopOf="@+id/all_texts_wrapped"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/compoundsListTitle" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/all_texts_wrapped"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/grey1"
-        app:layout_constraintTop_toBottomOf="@+id/compoundsListTitle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/transparent_window">
 
         <TextView
-            android:id="@+id/textViewShortName"
+            android:id="@+id/textViewTrivialName"
+            style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Short name"
-            app:layout_constraintBottom_toBottomOf="@+id/editTextShortName"
+            android:layout_marginStart="@dimen/grid_margin_side"
+            android:layout_marginEnd="8dp"
+            android:text="@string/trivial_name"
+            app:layout_constraintBottom_toBottomOf="@+id/editTextTrivialName"
+            app:layout_constraintEnd_toStartOf="@+id/editTextTrivialName"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/editTextShortName" />
+            app:layout_constraintTop_toTopOf="@+id/editTextTrivialName" />
 
         <TextView
             android:id="@+id/textViewMolarMass"
+            style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Molar mass"
+            android:layout_marginStart="@dimen/grid_margin_side"
+            android:layout_marginEnd="8dp"
+            android:text="@string/molar_mass"
             app:layout_constraintBottom_toBottomOf="@+id/editTextMolarMass"
+            app:layout_constraintEnd_toStartOf="@+id/editTextMolarMass"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/editTextMolarMass" />
 
         <TextView
-            android:id="@+id/textViewFullName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Full name"
-            app:layout_constraintBottom_toBottomOf="@+id/editTextFullName"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/editTextFullName" />
-
-        <TextView
             android:id="@+id/textViewIupac"
+            style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="IUPAC name"
-            app:layout_constraintBottom_toBottomOf="@+id/editIupac"
+            android:layout_marginStart="@dimen/grid_margin_side"
+            android:layout_marginEnd="8dp"
+            android:maxLines="2"
+            android:text="@string/iupac_name"
+            app:layout_constraintBottom_toBottomOf="@+id/editTextIupac"
+            app:layout_constraintEnd_toStartOf="@+id/editTextIupac"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/editIupac" />
+            app:layout_constraintTop_toTopOf="@+id/editTextIupac" />
 
         <TextView
             android:id="@+id/textViewFormula"
-            android:layout_width="wrap_content"
+            style="@style/FinalDilutionCompound"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Chemical formula"
+            android:layout_marginStart="@dimen/grid_margin_side"
+            android:layout_marginEnd="8dp"
+            android:text="@string/chemical_formula"
             app:layout_constraintBottom_toBottomOf="@+id/editTextFormula"
+            app:layout_constraintEnd_toStartOf="@+id/editTextFormula"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/editTextFormula" />
 
         <EditText
-            android:id="@+id/editTextShortName"
+            android:id="@+id/editTextTrivialName"
+            style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/grid_margin_side"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
+            android:ems="8"
             android:inputType="text"
-            android:text="Short name"
             app:layout_constraintBottom_toTopOf="@+id/editTextMolarMass"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -96,60 +129,61 @@
 
         <EditText
             android:id="@+id/editTextMolarMass"
+            style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
+            android:layout_marginEnd="@dimen/grid_margin_side"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
+            android:ems="8"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextShortName" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextTrivialName" />
 
         <EditText
-            android:id="@+id/editTextFullName"
+            android:id="@+id/editTextIupac"
+            style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
+            android:layout_marginEnd="@dimen/grid_margin_side"
+            android:ems="8"
             android:inputType="text"
-            android:text="Full name"
-            app:layout_constraintBottom_toTopOf="@+id/editIupac"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <EditText
-            android:id="@+id/editIupac"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:ems="10"
-            android:inputType="text"
-            android:text="IUPAC name"
+            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintBottom_toTopOf="@+id/editTextFormula"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <EditText
             android:id="@+id/editTextFormula"
+            style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
+            android:layout_marginEnd="@dimen/grid_margin_side"
+            android:layout_marginBottom="32dp"
+            android:ems="8"
             android:inputType="text"
-            android:text="MgCl2"
-            app:layout_constraintBottom_toTopOf="@+id/button2"
+            app:layout_constraintBottom_toTopOf="@+id/button_new_compound_done"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <Button
-            android:id="@+id/button2"
+        <ImageButton
+            android:id="@+id/button_new_compound_done"
             style="@style/FinalDilutionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="20dp"
-            android:text="Done"
+            android:layout_marginEnd="@dimen/grid_margin_side"
+            android:layout_marginBottom="24dp"
+            android:src="@drawable/ic_check_black_24dp"
+            android:tint="@color/white"
+            android:contentDescription="@string/new_compound_proceed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageButton
+            android:id="@+id/button_new_compound_cancel"
+            style="@style/FinalDilutionButton"
+            android:layout_marginStart="@dimen/grid_margin_side"
+            android:src="@drawable/ic_arrow_back_black_24dp"
+            android:tint="@color/white"
+            app:layout_constraintBottom_toBottomOf="@+id/button_new_compound_done"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/button_new_compound_done"
+            android:contentDescription="@string/new_compound_back" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
