--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -16,14 +16,14 @@
         android:text="@string/buttonNewCompound"
         android:textAlignment="center"
         android:textSize="40sp"
-        app:layout_constraintBottom_toTopOf="@+id/compoundsListTitle"
+        app:layout_constraintBottom_toTopOf="@+id/new_compound_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
-        android:id="@+id/compoundsListTitle"
+        android:id="@+id/new_compound_title"
         style="@style/FinalDilutionH1"
         android:layout_width="0dp"
         android:layout_height="50dp"
@@ -44,7 +44,7 @@
         app:layout_constraintBottom_toTopOf="@+id/all_texts_wrapped"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/compoundsListTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/new_compound_title" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/all_texts_wrapped"
@@ -118,8 +118,8 @@
             style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/grid_margin_side"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/grid_margin_side"
             android:ems="8"
             android:inputType="text"
             app:layout_constraintBottom_toTopOf="@+id/editTextMolarMass"
@@ -131,9 +131,9 @@
             android:id="@+id/editTextMolarMass"
             style="@style/FinalDilutionCompound"
             android:layout_width="wrap_content"
-            android:layout_marginEnd="@dimen/grid_margin_side"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginEnd="@dimen/grid_margin_side"
             android:ems="8"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
@@ -147,9 +147,9 @@
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:ems="8"
             android:inputType="text"
-            app:layout_constraintVertical_chainStyle="packed"
             app:layout_constraintBottom_toTopOf="@+id/editTextFormula"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
             android:id="@+id/editTextFormula"
@@ -168,9 +168,9 @@
             style="@style/FinalDilutionButton"
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:layout_marginBottom="24dp"
+            android:contentDescription="@string/new_compound_proceed"
             android:src="@drawable/ic_check_black_24dp"
             android:tint="@color/white"
-            android:contentDescription="@string/new_compound_proceed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
@@ -178,12 +178,12 @@
             android:id="@+id/button_new_compound_cancel"
             style="@style/FinalDilutionButton"
             android:layout_marginStart="@dimen/grid_margin_side"
+            android:contentDescription="@string/new_compound_back"
             android:src="@drawable/ic_arrow_back_black_24dp"
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/button_new_compound_done"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/button_new_compound_done"
-            android:contentDescription="@string/new_compound_back" />
+            app:layout_constraintTop_toTopOf="@+id/button_new_compound_done" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
