--- a/app/src/main/res/layout/component_edit.xml
+++ b/app/src/main/res/layout/component_edit.xml
@@ -10,6 +10,14 @@
     tools:context=".component.view.EditComponentActivity">
 
     <TextView
+        style="@style/FinalDilutionH1"
+        android:id="@+id/new_component_title"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        tools:text="COMPONENT NAME" />
+
+    <TextView
         android:id="@+id/desiredConcTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
