--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,8 +46,8 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textAppearance">?android:attr/textAppearanceMedium</item>
         <item name="android:background">@drawable/rounded_button</item>
-        <item name="android:layout_height">50dp</item>
-        <item name="android:layout_width">50dp</item>
+        <item name="android:layout_height">@dimen/button_size</item>
+        <item name="android:layout_width">@dimen/button_size</item>
         <item name="android:typeface">sans</item>
         <item name="android:textStyle">bold</item>
     </style>
