--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/compoundsList"
     android:layout_width="match_parent"
-    android:layout_height="500dp"
+    android:layout_height="@dimen/bottom_sheet_expanded_height"
     android:background="#00ffffff"
     android:elevation="40dp"
     app:behavior_hideable="false"
@@ -72,6 +72,7 @@
         android:layout_height="@dimen/button_size"
         android:layout_marginEnd="@dimen/grid_margin_side"
         android:layout_marginBottom="24dp"
+        android:inputType="textAutoComplete"
         android:background="@drawable/search_button"
         android:contentDescription="@string/button_search_description"
         android:paddingStart="25dp"
