--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -10,7 +10,7 @@
     app:behavior_peekHeight="@dimen/bottom_sheet_collapsed_height"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
-    <com.labessence.biotech.finaldilution.compound.view.AddComponentButtonView
+    <com.labwhisper.biotech.finaldilution.compound.view.AddComponentButtonView
         android:id="@+id/compoundsListHeader"
         style="@style/FinalDilutionH1"
         android:layout_width="match_parent"
