--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -122,9 +122,8 @@
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:ems="8"
             android:inputType="text"
-            app:layout_constraintBottom_toTopOf="@+id/editTextMolarMass"
+            app:layout_constraintBottom_toTopOf="@+id/editTextFormula"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <EditText
@@ -137,7 +136,7 @@
             android:ems="8"
             android:inputType="number"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTrivialName" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextIupac" />
 
         <EditText
             android:id="@+id/editTextIupac"
@@ -147,7 +146,8 @@
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:ems="8"
             android:inputType="text"
-            app:layout_constraintBottom_toTopOf="@+id/editTextFormula"
+            app:layout_constraintBottom_toTopOf="@+id/editTextMolarMass"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
