--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -134,7 +134,8 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:ems="8"
-            android:inputType="number"
+            android:inputType="numberDecimal"
+            android:digits="0123456789."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextIupac" />
 
