--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:padding="50dp"
     android:shape="rectangle">
-    <solid android:color="@color/light_blue" />
+    <solid android:color="@color/cyan" />
     <corners android:radius="50dp" />
 </shape>
