--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,15 +4,16 @@
     <color name="grey1">#EDEDED</color>
     <color name="grey2">#F2F2F2</color>
     <color name="background_color">@color/white</color>
-    <color name="light_blue">#66E2FF</color>
+    <color name="cyan">#66E2FF</color>
     <color name="background_accent">#D2EEFA</color>
     <color name="background_accent_saturated">#f8f9fa</color>
     <color name="blue">#86D7F5</color>
+    <color name="dark_blue">#548699</color>
     <color name="text_default">#000000</color>
     <color name="text_secondary">#757575</color>
     <color name="transparent">#00000000</color>
 
-    <color name="colorPrimary">@color/light_blue</color>
-    <color name="colorPrimaryDark">@color/blue</color>
-    <color name="colorAccent">@color/light_blue</color>
+    <color name="colorPrimary">@color/cyan</color>
+    <color name="colorPrimaryDark">@color/dark_blue</color>
+    <color name="colorAccent">@color/blue</color>
 </resources>
