--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,5 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/white</item>
-    </style>
-
-    <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowBackground">@drawable/professore_full_screen</item>
-    </style>
-
     <style name="FinalDilutionMem">
         <item name="android:textColor">@color/blue</item>
         <item name="android:textSize">60sp</item>
@@ -22,7 +8,7 @@
     </style>
 
     <style name="FinalDilutionH1">
-        <item name="android:textColor">@color/light_blue</item>
+        <item name="android:textColor">@color/cyan</item>
         <item name="android:textSize">28sp</item>
         <item name="android:typeface">sans</item>
         <item name="android:textStyle">bold</item>
@@ -50,6 +36,18 @@
         <item name="android:layout_width">@dimen/button_size</item>
         <item name="android:typeface">sans</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="FinalDilutionFormLabel">
+        <item name="android:textColor">@color/text_default</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="FinalDilutionFormEntry">
+        <item name="android:textColor">@color/text_default</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:typeface">sans</item>
     </style>
 
 </resources>
