--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,4 +50,11 @@
         <item name="android:typeface">sans</item>
     </style>
 
+    <style name="FinalDilutionRadioButton">
+        <item name="android:scaleX">1.35</item>
+        <item name="android:scaleY">1.35</item>
+        <item name="android:layout_marginStart">20dp</item>
+        <item name="android:layout_marginEnd">20dp</item>
+    </style>
+
 </resources>
