Long names now fit, component list design.

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,15 +14,21 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <style name="FinalDilutionCompound">
+    <style name="FinalDilutionListTextPrimary">
         <item name="android:textColor">@color/text_default</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:typeface">sans</item>
     </style>
 
-    <style name="FinalDilutionMass">
+    <style name="FinalDilutionListTextSecondary">
         <item name="android:textColor">@color/text_secondary</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:typeface">sans</item>
+    </style>
+
+    <style name="FinalDilutionListTextExtra">
+        <item name="android:textColor">@color/text_secondary</item>
+        <item name="android:textSize">12sp</item>
         <item name="android:typeface">sans</item>
     </style>
 
