--- a/app/src/main/res/layout/checklist.xml
+++ b/app/src/main/res/layout/checklist.xml
@@ -3,10 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout2"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="6dip">
+    android:layout_width="match_parent"
+    android:layout_height="48dp">
+
+    <TextView
+        android:id="@+id/checklist_component"
+        style="@style/FinalDilutionListTextPrimary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toTopOf="@+id/checklist_extraTextView"
+        app:layout_constraintEnd_toStartOf="@+id/checklist_amount"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:text="Aror" />
+
+    <TextView
+        android:id="@+id/checklist_amount"
+        style="@style/FinalDilutionListTextSecondary"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:gravity="end"
+        android:maxLines="1"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/checklist_checkBox1"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="60.15 ml" />
 
     <CheckBox
         android:id="@+id/checklist_checkBox1"
@@ -17,59 +44,17 @@
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/checklist_mainTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="Compound" />
-
-    <View
-        android:id="@+id/checklist_centerShim"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/checklist_extraTextView"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-
-    <TextView
-        android:id="@+id/checklist_percentageTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        app:layout_constraintLeft_toRightOf="@+id/checklist_mainTextView"
-        app:layout_constraintRight_toLeftOf="@+id/checklist_centerShim"
-        app:layout_constraintStart_toEndOf="@+id/checklist_mainTextView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/checklist_unitextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        app:layout_constraintEnd_toStartOf="@+id/checklist_checkBox1"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/checklist_mainTextView"
-        app:layout_constraintTop_toTopOf="@+id/checklist_checkBox1"
-        tools:text="60.15 ml" />
 
     <TextView
         android:id="@+id/checklist_extraTextView"
+        style="@style/FinalDilutionListTextExtra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/checklist_mainTextView"
+        app:layout_constraintTop_toBottomOf="@+id/checklist_component"
         tools:text="36.0 [%]" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
