--- a/app/src/main/res/layout/solution_edit.xml
+++ b/app/src/main/res/layout/solution_edit.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/edit_activity"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/edit_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,14 +19,14 @@
             android:id="@+id/toolbar"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:layout_constraintBottom_toTopOf="@id/componentsTextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/componentsTextView"
             app:layout_constraintVertical_weight="0.1"
-            android:focusableInTouchMode="true"
-            android:focusable="true"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
             <EditText
@@ -45,6 +45,8 @@
             android:id="@+id/componentsTextView"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="@dimen/grid_margin_side"
+            android:layout_marginEnd="@dimen/grid_margin_side"
             android:ems="10"
             android:text=""
             app:layout_constraintBottom_toTopOf="@+id/beaker"
