--- a/app/src/main/res/drawable/semi_rounded_button.xml
+++ b/app/src/main/res/drawable/semi_rounded_button.xml
@@ -2,26 +2,26 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:padding="50dp" android:shape="rectangle">
-            <solid android:color="@color/darker_blue" />
-            <corners android:radius="50dp" />
+            <solid android:color="@color/darkest_yellow" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
     <item android:state_checked="false" android:state_pressed="true">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:padding="50dp" android:shape="rectangle">
-            <solid android:color="@color/darker_cyan" />
-            <corners android:radius="50dp" />
+            <solid android:color="@color/darker_yellow" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
     <item android:state_enabled="false">
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:padding="50dp" android:shape="rectangle">
             <solid android:color="@color/grey3" />
-            <corners android:radius="50dp" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:padding="50dp" android:shape="rectangle">
-            <solid android:color="@color/cyan" />
-            <corners android:radius="50dp" />
+            <solid android:color="@color/yellow" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
 </selector>
