--- a/app/src/main/res/layout/component_edit.xml
+++ b/app/src/main/res/layout/component_edit.xml
@@ -1,224 +1,284 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".component.view.EditComponentActivity">
 
     <TextView
-        style="@style/FinalDilutionH1"
         android:id="@+id/new_component_title"
-        android:gravity="center"
-        android:layout_width="wrap_content"
+        style="@style/FinalDilutionH1"
+        android:layout_width="0dp"
         android:layout_height="70dp"
+        android:background="@color/secondary_background"
+        android:gravity="center"
+        android:paddingStart="@dimen/grid_margin_side"
+        android:paddingEnd="@dimen/grid_margin_side"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:text="very long COMPONENT NAME" />
 
     <TextView
         android:id="@+id/desiredConcTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/desiredConcEditText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="Desired concentration"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_marginStart="@dimen/grid_margin_side"
+        android:layout_marginTop="8dp"
+        android:text="@string/desired_concentration"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        app:layout_constraintBottom_toTopOf="@+id/desiredConcEditText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/new_component_title"
+        app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
         android:id="@+id/desiredConcEditText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/desiredConcButtonsBar"
-        android:layout_alignEnd="@+id/desiredConcTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/desiredConcTextView"
+        android:layout_marginStart="@dimen/grid_margin_side"
+        android:layout_marginEnd="@dimen/grid_margin_side"
+        android:layout_marginBottom="8dp"
         android:imeOptions="actionDone"
         android:inputType="numberDecimal"
-        android:selectAllOnFocus="true" />
+        android:selectAllOnFocus="true"
+        app:layout_constraintBottom_toTopOf="@+id/desiredConcButtonsBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/desiredConcTextView" />
 
     <RadioGroup
         android:id="@+id/desiredConcButtonsBar"
-        android:layout_width="fill_parent"
-        android:layout_height="100dp"
-        android:layout_above="@+id/secondView"
-        android:layout_alignEnd="@+id/secondView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/secondView"
-        android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:clipToPadding="false"
+        android:orientation="horizontal"
+        android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/secondView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/desiredConcEditText">
 
         <RadioButton
             android:id="@+id/desiredPercentageConcButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".25"
-            android:background="@drawable/button_states"
+            style="@style/FinalDilutionBigButton"
+            android:layout_width="@dimen/button_one_fifth"
+            android:layout_height="@dimen/button_one_fifth"
+            android:layout_marginEnd="6dp"
             android:button="@null"
             android:gravity="center"
-            android:text="%" />
+            android:text="@string/percent" />
 
         <RadioButton
             android:id="@+id/desiredMolarConcButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".25"
-            android:background="@drawable/button_states"
+            style="@style/FinalDilutionBigButton"
+            android:layout_width="@dimen/button_one_fifth"
+            android:layout_height="@dimen/button_one_fifth"
+            android:layout_marginEnd="6dp"
             android:button="@null"
             android:gravity="center"
-            android:text="M" />
+            android:text="@string/mol" />
 
         <RadioButton
             android:id="@+id/desiredMilimolarConcButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".25"
-            android:background="@drawable/button_states"
+            style="@style/FinalDilutionBigButton"
+            android:layout_width="@dimen/button_one_fifth"
+            android:layout_height="@dimen/button_one_fifth"
+            android:layout_marginEnd="6dp"
             android:button="@null"
             android:gravity="center"
-            android:text="mM" />
+            android:text="@string/milimol" />
 
         <RadioButton
             android:id="@+id/desiredMgMlConcButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".25"
-            android:background="@drawable/button_states"
+            style="@style/FinalDilutionBigButton"
+            android:layout_width="@dimen/button_one_fifth"
+            android:layout_height="@dimen/button_one_fifth"
             android:button="@null"
             android:gravity="center"
-            android:text="mg/ml" />
+            android:text="@string/mg_ml" />
     </RadioGroup>
 
     <View
         android:id="@+id/secondView"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:layout_centerVertical="true" />
+        android:layout_centerVertical="true"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/enableStockDilutionButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/desiredConcButtonsBar" />
 
-    <ToggleButton
+    <ImageButton
         android:id="@+id/enableStockDilutionButton"
+        android:layout_width="@dimen/button_size"
+        android:layout_height="@dimen/button_size"
+        android:layout_below="@+id/secondView"
+        android:layout_marginStart="@dimen/grid_margin_side"
+        android:adjustViewBounds="true"
+        android:background="@color/transparent"
+        android:clickable="false"
+        android:contentDescription="@string/dilution_from_stock"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_expand_more_black_24dp"
+        android:tint="@color/cyan"
+        app:layout_constraintBottom_toTopOf="@+id/stockConcTextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/secondView" />
+
+    <TextView
+        android:id="@+id/from_stock"
+        style="@style/FinalDilutionListTextSecondary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/secondView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/secondView"
-        android:layout_below="@+id/secondView"
-        android:clickable="false"
-        android:textOff="Dilution from stock"
-        android:textOn="Dilution from stock" />
+        android:layout_marginStart="8dp"
+        android:text="@string/dilution_from_stock"
+        app:layout_constraintBottom_toBottomOf="@+id/enableStockDilutionButton"
+        app:layout_constraintStart_toEndOf="@+id/enableStockDilutionButton"
+        app:layout_constraintTop_toTopOf="@+id/enableStockDilutionButton" />
 
     <TextView
         android:id="@+id/stockConcTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/stockConcEditText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="Stock concentration"
+        android:layout_marginStart="@dimen/grid_margin_side"
+        android:text="@string/stock_concentration"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/stockConcEditText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enableStockDilutionButton"
+        tools:visibility="visible" />
 
     <EditText
         android:id="@+id/stockConcEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/stockConcButtonsBar"
-        android:layout_alignEnd="@+id/stockConcTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/stockConcTextView"
+        android:layout_marginStart="@dimen/grid_margin_side"
+        android:layout_marginEnd="@dimen/grid_margin_side"
+        android:layout_marginBottom="8dp"
         android:clickable="false"
         android:ems="10"
         android:imeOptions="actionDone"
         android:inputType="number"
         android:selectAllOnFocus="true"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/stockConcButtonsBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stockConcTextView"
+        tools:visibility="visible" />
 
     <RadioGroup
         android:id="@+id/stockConcButtonsBar"
-        android:layout_width="fill_parent"
-        android:layout_height="100dp"
-        android:layout_above="@+id/buttonAddCompoundDone"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/grid_margin_side"
+        android:layout_marginEnd="@dimen/grid_margin_side"
+        android:layout_marginBottom="8dp"
+        android:clipToPadding="false"
         android:orientation="horizontal"
-        android:visibility="invisible">
+        android:padding="10dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stockConcEditText"
+        tools:visibility="visible">
 
         <RadioButton
             android:id="@+id/stockPercentageConcButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".25"
-            android:background="@drawable/button_states"
+            style="@style/FinalDilutionBigButton"
+            android:layout_width="@dimen/button_one_fifth"
+            android:layout_height="@dimen/button_one_fifth"
+            android:layout_marginEnd="6dp"
             android:button="@null"
             android:gravity="center"
-            android:text="%"
-            android:visibility="invisible" />
+            android:text="@string/percent"
+            android:visibility="invisible"
+            tools:visibility="visible" />
 
         <RadioButton
             android:id="@+id/stockMolarConcButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".25"
-            android:background="@drawable/button_states"
+            style="@style/FinalDilutionBigButton"
+            android:layout_width="@dimen/button_one_fifth"
+            android:layout_height="@dimen/button_one_fifth"
+            android:layout_marginEnd="6dp"
             android:button="@null"
             android:gravity="center"
-            android:text="M"
-            android:visibility="invisible" />
+            android:text="@string/mol"
+            android:visibility="invisible"
+            tools:visibility="visible" />
 
         <RadioButton
             android:id="@+id/stockMilimolarConcButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".25"
-            android:background="@drawable/button_states"
+            style="@style/FinalDilutionBigButton"
+            android:layout_width="@dimen/button_one_fifth"
+            android:layout_height="@dimen/button_one_fifth"
+            android:layout_marginEnd="6dp"
             android:button="@null"
             android:gravity="center"
-            android:text="mM"
-            android:visibility="invisible" />
+            android:text="@string/milimol"
+            android:visibility="invisible"
+            tools:visibility="visible" />
 
         <RadioButton
             android:id="@+id/stockMgMlConcButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".25"
-            android:background="@drawable/button_states"
+            style="@style/FinalDilutionBigButton"
+            android:layout_width="@dimen/button_one_fifth"
+            android:layout_height="@dimen/button_one_fifth"
             android:button="@null"
             android:gravity="center"
-            android:text="mg/ml"
-            android:visibility="invisible" />
+            android:text="@string/mg_ml"
+            android:visibility="invisible"
+            tools:visibility="visible" />
 
     </RadioGroup>
 
-    <Button
+    <ImageButton
         android:id="@+id/buttonAddCompoundDone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_gravity="bottom"
-        android:text="DONE" />
+        style="@style/FinalDilutionButton"
+        android:layout_marginEnd="@dimen/grid_margin_side"
+        android:layout_marginBottom="24dp"
+        android:contentDescription="@string/navigation_proceed"
+        android:src="@drawable/ic_check_black_24dp"
+        android:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/buttonAddCompoundCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:text="CANCEL" />
+        style="@style/FinalDilutionButton"
+        android:layout_marginStart="@dimen/grid_margin_side"
+        android:layout_marginBottom="24dp"
+        android:contentDescription="@string/navigation_back"
+        android:src="@drawable/ic_arrow_back_black_24dp"
+        android:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+    <ImageButton
         android:id="@+id/buttonAddCompoundDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/buttonAddCompoundDone"
-        android:layout_centerHorizontal="true"
-        android:text="DELETE" />
+        style="@style/FinalDilutionButton"
+        android:layout_marginBottom="24dp"
+        android:contentDescription="@string/action_delete"
+        android:src="@drawable/ic_clear_white_24dp"
+        android:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonAddCompoundDone"
+        app:layout_constraintStart_toEndOf="@+id/buttonAddCompoundCancel" />
 
-</RelativeLayout>
+    <View
+        android:id="@+id/bottom_view"
+        android:layout_width="match_parent"
+        android:layout_height="110dp"
+        android:background="@color/secondary_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
