--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -117,6 +117,7 @@
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:adjustViewBounds="true"
             android:background="@color/transparent"
+            android:contentDescription="@string/advanced_options"
             android:scaleType="fitXY"
             android:src="@drawable/ic_expand_more_black_24dp"
             android:tint="@color/cyan"
@@ -157,7 +158,7 @@
             android:id="@+id/button_new_compound_done"
             style="@style/FinalDilutionButton"
             android:layout_marginEnd="@dimen/grid_margin_side"
-            android:contentDescription="@string/new_compound_proceed"
+            android:contentDescription="@string/navigation_proceed"
             android:src="@drawable/ic_check_black_24dp"
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/button_new_compound_cancel"
@@ -170,7 +171,7 @@
             android:layout_marginStart="@dimen/grid_margin_side"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
-            android:contentDescription="@string/new_compound_back"
+            android:contentDescription="@string/navigation_back"
             android:src="@drawable/ic_arrow_back_black_24dp"
             android:tint="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
