--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
     <color name="grey1">#EDEDED</color>
     <color name="grey2">#F2F2F2</color>
+    <color name="grey3">#F5F3E9</color>
+    <color name="grey4">#757575</color>
     <color name="background_color">@color/white</color>
     <color name="cyan">#66E2FF</color>
+    <color name="darker_cyan">#65defc</color>
+    <color name="yellow">#ffe266</color>
+    <color name="darker_yellow">#fcde65</color>
+    <color name="darkest_yellow">#dec37a</color>
     <color name="bluish_gray">#80d6d0</color>
     <color name="background_accent">#D2EEFA</color>
     <color name="background_accent_saturated">#f8f9fa</color>
     <color name="background_error">#fad0d0</color>
     <color name="blue">#86D7F5</color>
+    <color name="darker_blue">#7ac3de</color>
     <color name="dark_blue">#548699</color>
     <color name="text_default">#000000</color>
-    <color name="text_secondary">#757575</color>
     <color name="transparent">#00000000</color>
 
+    <color name="text_secondary">@color/grey4</color>
     <color name="colorPrimary">@color/cyan</color>
     <color name="colorPrimaryDark">@color/dark_blue</color>
+    <color name="colorSecondary">@color/yellow</color>
     <color name="colorAccent">@color/blue</color>
+    <color name="secondary_background">@color/grey2</color>
 </resources>
