--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="search_button_offset_open">13dp</dimen>
     <dimen name="search_button_offset_closed">12dp</dimen>
     <dimen name="compound_list_item_height">60dp</dimen>
+    <dimen name="button_one_fifth">70dp</dimen>
 </resources>
