--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,7 @@
     </style>
 
     <style name="FinalDilutionButton">
+        <item name="android:stateListAnimator">@animator/button_state_list_anim_material</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:textColor">@color/white</item>
@@ -42,6 +43,11 @@
         <item name="android:layout_width">@dimen/button_size</item>
         <item name="android:typeface">sans</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="FinalDilutionBigButton" parent="FinalDilutionButton">
+        <item name="android:background">@drawable/semi_rounded_button</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="FinalDilutionFormLabel">
