ComponentEdit is now a Fragment

--- a/app/src/main/res/layout/component_edit.xml
+++ b/app/src/main/res/layout/component_edit.xml
@@ -2,14 +2,15 @@
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:fillViewport="true"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".component.view.EditComponentActivity">
+        android:background="@color/white"
+        tools:context=".component.view.EditComponentFragment">
 
         <TextView
             android:id="@+id/new_component_title"
@@ -39,7 +40,7 @@
 
         <EditText
             android:id="@+id/desiredConcEditText"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/grid_margin_side"
             android:layout_marginEnd="@dimen/grid_margin_side"
