--- a/app/src/main/res/layout/compound_new.xml
+++ b/app/src/main/res/layout/compound_new.xml
@@ -53,9 +53,12 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/form_name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.25"
+            app:layout_constraintVertical_chainStyle="packed">
 
             <RadioButton
                 android:id="@+id/radioButtonSolid"
@@ -111,6 +114,7 @@
             android:src="@drawable/ic_expand_more_black_24dp"
             android:tint="@color/cyan"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/form_trivial_name"
             app:layout_constraintTop_toBottomOf="@+id/form_molar_mass" />
 
         <include
@@ -118,6 +122,7 @@
             layout="@layout/form_input_field"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:layout_marginStart="@dimen/grid_margin_side"
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:layout_marginBottom="@dimen/small_vertical_margin"
@@ -126,7 +131,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/form_molar_mass"
-            app:layout_constraintVertical_bias="1.0"
+            app:layout_constraintVertical_bias="0.0"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <include
@@ -138,7 +143,7 @@
             android:layout_marginEnd="@dimen/grid_margin_side"
             android:layout_marginBottom="@dimen/medium_vertical_margin"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@id/button_new_compound_cancel"
+            app:layout_constraintBottom_toTopOf="@+id/button_new_compound_cancel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/form_trivial_name" />
