--- a/app/src/main/res/layout/compound_panel.xml
+++ b/app/src/main/res/layout/compound_panel.xml
@@ -39,6 +39,8 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/grey1"
+        android:requiresFadingEdge="vertical"
+        android:fadingEdgeLength="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
